--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "minipass": "^2.3.3",
+    "morgan": "^1.9.0",
     "yallist": "^3.0.2"
   },
   "devDependencies": {},
